--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "firebase": "^5.3.0",
     "register-service-worker": "^1.0.0",
     "vue": "^2.5.16",
-    "vue-router": "^3.0.1"
+    "vue-markdown": "^2.2.4",
+    "vue-router": "^3.0.1",
+    "vuefire": "^2.0.0-alpha.12"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.0.0-rc.5",
