--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "firebase": "^5.3.0",
+    "flamelink": "^0.17.1",
     "register-service-worker": "^1.0.0",
     "vue": "^2.5.16",
     "vue-gallery": "^1.4.0",
